--- a/src/components/UI/Search/SearchInput.module.scss
+++ b/src/components/UI/Search/SearchInput.module.scss
@@ -4,37 +4,32 @@
     position: relative;
     max-width: 23rem;
     width: 100%;
-    z-index: 800;
+
+    & > div {
+        max-width: 23rem;
+        width: 100%;
+    }
+
+    & svg {
+        color: white;
+    }
 
     & svg:first-of-type {
         font-weight: 500;
         font-size: 1.25rem;
-        margin-right: 0.25rem;
-        color: #2e425a;
+        margin-right: 0.5rem;
+        left: 0.75rem;
         position: absolute;
-        left: 0.5rem;
     }
     & input {
-        font-weight: 500;
-        font-size: 1rem;
-        border: none;
-        outline: none;
-        color: #2e425a;
-        padding: 0.5rem 0 0.5rem 2rem;
         border-radius: 4px;
-        max-width: 23rem;
-        width: 100%;
-        border: 2px solid transparent;
+        color: white;
+        background-color: rgba(255, 255, 255, 0.15);
+        padding: 0.75rem 0.5rem 0.75rem 2.75rem;
 
         &::placeholder {
-            color: #2e425a;
+            color: white;
             opacity: 0.8;
-            font-weight: 500;
-        }
-
-        &:focus {
-            background-color: #eef5f8;
-            border: 2px solid #e3f4fd;
         }
     }
 
